New dtest branch for testing; TRASH COMMIT DO NOT COMMIT

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -106,7 +106,7 @@ jobs:
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
     - DTEST_REPO: git://github.com/ekaterinadimitrova2/cassandra-dtest.git
-    - DTEST_BRANCH: CASSANDRA-15234-new
+    - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
@@ -281,7 +281,7 @@ jobs:
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
     - DTEST_REPO: git://github.com/ekaterinadimitrova2/cassandra-dtest.git
-    - DTEST_BRANCH: CASSANDRA-15234-new
+    - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
@@ -376,7 +376,7 @@ jobs:
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
     - DTEST_REPO: git://github.com/ekaterinadimitrova2/cassandra-dtest.git
-    - DTEST_BRANCH: CASSANDRA-15234-new
+    - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
@@ -485,7 +485,7 @@ jobs:
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
     - DTEST_REPO: git://github.com/ekaterinadimitrova2/cassandra-dtest.git
-    - DTEST_BRANCH: CASSANDRA-15234-new
+    - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
@@ -608,7 +608,7 @@ jobs:
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
     - DTEST_REPO: git://github.com/ekaterinadimitrova2/cassandra-dtest.git
-    - DTEST_BRANCH: CASSANDRA-15234-new
+    - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
@@ -703,7 +703,7 @@ jobs:
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
     - DTEST_REPO: git://github.com/ekaterinadimitrova2/cassandra-dtest.git
-    - DTEST_BRANCH: CASSANDRA-15234-new
+    - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
@@ -798,7 +798,7 @@ jobs:
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
     - DTEST_REPO: git://github.com/ekaterinadimitrova2/cassandra-dtest.git
-    - DTEST_BRANCH: CASSANDRA-15234-new
+    - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
@@ -894,7 +894,7 @@ jobs:
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
     - DTEST_REPO: git://github.com/ekaterinadimitrova2/cassandra-dtest.git
-    - DTEST_BRANCH: CASSANDRA-15234-new
+    - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
@@ -990,7 +990,7 @@ jobs:
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
     - DTEST_REPO: git://github.com/ekaterinadimitrova2/cassandra-dtest.git
-    - DTEST_BRANCH: CASSANDRA-15234-new
+    - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
@@ -1086,7 +1086,7 @@ jobs:
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
     - DTEST_REPO: git://github.com/ekaterinadimitrova2/cassandra-dtest.git
-    - DTEST_BRANCH: CASSANDRA-15234-new
+    - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
@@ -1181,7 +1181,7 @@ jobs:
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
     - DTEST_REPO: git://github.com/ekaterinadimitrova2/cassandra-dtest.git
-    - DTEST_BRANCH: CASSANDRA-15234-new
+    - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
@@ -1325,7 +1325,7 @@ jobs:
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
     - DTEST_REPO: git://github.com/ekaterinadimitrova2/cassandra-dtest.git
-    - DTEST_BRANCH: CASSANDRA-15234-new
+    - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
@@ -1448,7 +1448,7 @@ jobs:
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
     - DTEST_REPO: git://github.com/ekaterinadimitrova2/cassandra-dtest.git
-    - DTEST_BRANCH: CASSANDRA-15234-new
+    - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
@@ -1543,7 +1543,7 @@ jobs:
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
     - DTEST_REPO: git://github.com/ekaterinadimitrova2/cassandra-dtest.git
-    - DTEST_BRANCH: CASSANDRA-15234-new
+    - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
@@ -1642,7 +1642,7 @@ jobs:
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
     - DTEST_REPO: git://github.com/ekaterinadimitrova2/cassandra-dtest.git
-    - DTEST_BRANCH: CASSANDRA-15234-new
+    - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
@@ -1719,7 +1719,7 @@ jobs:
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
     - DTEST_REPO: git://github.com/ekaterinadimitrova2/cassandra-dtest.git
-    - DTEST_BRANCH: CASSANDRA-15234-new
+    - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
@@ -1795,7 +1795,7 @@ jobs:
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
     - DTEST_REPO: git://github.com/ekaterinadimitrova2/cassandra-dtest.git
-    - DTEST_BRANCH: CASSANDRA-15234-new
+    - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
@@ -1858,7 +1858,7 @@ jobs:
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
     - DTEST_REPO: git://github.com/ekaterinadimitrova2/cassandra-dtest.git
-    - DTEST_BRANCH: CASSANDRA-15234-new
+    - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
@@ -1967,7 +1967,7 @@ jobs:
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
     - DTEST_REPO: git://github.com/ekaterinadimitrova2/cassandra-dtest.git
-    - DTEST_BRANCH: CASSANDRA-15234-new
+    - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
@@ -2076,7 +2076,7 @@ jobs:
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
     - DTEST_REPO: git://github.com/ekaterinadimitrova2/cassandra-dtest.git
-    - DTEST_BRANCH: CASSANDRA-15234-new
+    - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
@@ -2175,7 +2175,7 @@ jobs:
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
     - DTEST_REPO: git://github.com/ekaterinadimitrova2/cassandra-dtest.git
-    - DTEST_BRANCH: CASSANDRA-15234-new
+    - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
@@ -2271,7 +2271,7 @@ jobs:
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
     - DTEST_REPO: git://github.com/ekaterinadimitrova2/cassandra-dtest.git
-    - DTEST_BRANCH: CASSANDRA-15234-new
+    - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
@@ -2326,7 +2326,7 @@ jobs:
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
     - DTEST_REPO: git://github.com/ekaterinadimitrova2/cassandra-dtest.git
-    - DTEST_BRANCH: CASSANDRA-15234-new
+    - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
@@ -2502,7 +2502,7 @@ jobs:
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
     - DTEST_REPO: git://github.com/ekaterinadimitrova2/cassandra-dtest.git
-    - DTEST_BRANCH: CASSANDRA-15234-new
+    - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
@@ -2579,7 +2579,7 @@ jobs:
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
     - DTEST_REPO: git://github.com/ekaterinadimitrova2/cassandra-dtest.git
-    - DTEST_BRANCH: CASSANDRA-15234-new
+    - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
@@ -2674,7 +2674,7 @@ jobs:
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
     - DTEST_REPO: git://github.com/ekaterinadimitrova2/cassandra-dtest.git
-    - DTEST_BRANCH: CASSANDRA-15234-new
+    - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
@@ -2784,7 +2784,7 @@ jobs:
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
     - DTEST_REPO: git://github.com/ekaterinadimitrova2/cassandra-dtest.git
-    - DTEST_BRANCH: CASSANDRA-15234-new
+    - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
@@ -2882,7 +2882,7 @@ jobs:
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
     - DTEST_REPO: git://github.com/ekaterinadimitrova2/cassandra-dtest.git
-    - DTEST_BRANCH: CASSANDRA-15234-new
+    - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
@@ -2977,7 +2977,7 @@ jobs:
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
     - DTEST_REPO: git://github.com/ekaterinadimitrova2/cassandra-dtest.git
-    - DTEST_BRANCH: CASSANDRA-15234-new
+    - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
@@ -3072,7 +3072,7 @@ jobs:
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
     - DTEST_REPO: git://github.com/ekaterinadimitrova2/cassandra-dtest.git
-    - DTEST_BRANCH: CASSANDRA-15234-new
+    - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
@@ -3135,7 +3135,7 @@ jobs:
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
     - DTEST_REPO: git://github.com/ekaterinadimitrova2/cassandra-dtest.git
-    - DTEST_BRANCH: CASSANDRA-15234-new
+    - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
@@ -3244,7 +3244,7 @@ jobs:
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
     - DTEST_REPO: git://github.com/ekaterinadimitrova2/cassandra-dtest.git
-    - DTEST_BRANCH: CASSANDRA-15234-new
+    - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
@@ -3298,7 +3298,7 @@ jobs:
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
     - DTEST_REPO: git://github.com/ekaterinadimitrova2/cassandra-dtest.git
-    - DTEST_BRANCH: CASSANDRA-15234-new
+    - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
@@ -3361,7 +3361,7 @@ jobs:
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
     - DTEST_REPO: git://github.com/ekaterinadimitrova2/cassandra-dtest.git
-    - DTEST_BRANCH: CASSANDRA-15234-new
+    - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
@@ -3459,7 +3459,7 @@ jobs:
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
     - DTEST_REPO: git://github.com/ekaterinadimitrova2/cassandra-dtest.git
-    - DTEST_BRANCH: CASSANDRA-15234-new
+    - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
@@ -3569,7 +3569,7 @@ jobs:
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
     - DTEST_REPO: git://github.com/ekaterinadimitrova2/cassandra-dtest.git
-    - DTEST_BRANCH: CASSANDRA-15234-new
+    - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
@@ -3744,7 +3744,7 @@ jobs:
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
     - DTEST_REPO: git://github.com/ekaterinadimitrova2/cassandra-dtest.git
-    - DTEST_BRANCH: CASSANDRA-15234-new
+    - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
@@ -3839,7 +3839,7 @@ jobs:
     - CASS_DRIVER_NO_CYTHON: true
     - CASSANDRA_SKIP_SYNC: true
     - DTEST_REPO: git://github.com/ekaterinadimitrova2/cassandra-dtest.git
-    - DTEST_BRANCH: CASSANDRA-15234-new
+    - DTEST_BRANCH: CASSANDRA-15234-take2
     - CCM_MAX_HEAP_SIZE: 1024M
     - CCM_HEAP_NEWSIZE: 256M
     - REPEATED_UTEST_TARGET: testsome
