--- a/test/conf/cassandra.yaml
+++ b/test/conf/cassandra.yaml
@@ -6,7 +6,7 @@ cluster_name: Test Cluster
 # memtable_allocation_type: heap_buffers
 memtable_allocation_type: offheap_objects
 commitlog_sync: batch
-commitlog_sync_batch_window: 1.0ms
+commitlog_sync_batch_window_in_ms: 1
 commitlog_segment_size: 5mb
 commitlog_directory: build/test/cassandra/commitlog
 # commitlog_compression:
